; ModuleID = '/home/carl/AnghaBench/kphp-kdb/antispam/extr_antispam-import-dump.c_clean_binlog_file.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/antispam/extr_antispam-import-dump.c_clean_binlog_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_start = type { i32, i32, i32, i32, i32, i32 }

@binlogname = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [3 x i8] c"wb\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [57 x i8] c"fatal: can't open binlogname=%s, to cleanup (-c option)\0A\00", align 1
@LEV_START = common dso_local global i32 0, align 4
@ANTISPAM_SCHEMA_V1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @clean_binlog_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clean_binlog_file() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.lev_start, align 4
  %3 = load i8*, i8** @binlogname, align 8
  %4 = call i32* @fopen(i8* %3, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %4, i32** %1, align 8
  %5 = load i32*, i32** %1, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %0
  %8 = load i32, i32* @stderr, align 4
  %9 = load i8*, i8** @binlogname, align 8
  %10 = call i32 @fprintf(i32 %8, i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str.1, i64 0, i64 0), i8* %9)
  %11 = call i32 @exit(i32 1) #3
  unreachable

12:                                               ; preds = %0
  %13 = getelementptr inbounds %struct.lev_start, %struct.lev_start* %2, i32 0, i32 0
  %14 = load i32, i32* @LEV_START, align 4
  store i32 %14, i32* %13, align 4
  %15 = getelementptr inbounds %struct.lev_start, %struct.lev_start* %2, i32 0, i32 1
  %16 = load i32, i32* @ANTISPAM_SCHEMA_V1, align 4
  store i32 %16, i32* %15, align 4
  %17 = getelementptr inbounds %struct.lev_start, %struct.lev_start* %2, i32 0, i32 2
  store i32 0, i32* %17, align 4
  %18 = getelementptr inbounds %struct.lev_start, %struct.lev_start* %2, i32 0, i32 3
  store i32 1, i32* %18, align 4
  %19 = getelementptr inbounds %struct.lev_start, %struct.lev_start* %2, i32 0, i32 4
  store i32 0, i32* %19, align 4
  %20 = getelementptr inbounds %struct.lev_start, %struct.lev_start* %2, i32 0, i32 5
  store i32 1, i32* %20, align 4
  %21 = load i32*, i32** %1, align 8
  %22 = call i32 @fwrite(%struct.lev_start* %2, i32 20, i32 1, i32* %21)
  %23 = load i32*, i32** %1, align 8
  %24 = call i32 @fclose(i32* %23)
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @fwrite(%struct.lev_start*, i32, i32, i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
